# rsNDKTest

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/mono_rs_wrapper/jni/: Android.mk  mono.rs  rsMonoWrapper.cpp  rsMonoWrapper.h
app/libs/renderscript/prebuilt/darwin-x86_64/: repo.prop
app/src/androidTest/java/com/yingnanwang/cmakerstest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ScriptC_mono.cpp  ScriptC_mono.h  native-lib.cpp
app/src/main/java/com/yingnanwang/cmakerstest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/rs/: mono.rs
app/src/test/java/com/yingnanwang/cmakerstest/: ExampleUnitTest.java
